--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portifolio-tiago",
+  "name": "portifolio-tiago-2",
   "homepage": "https://mccpaiva.github.io/portifolio-tiago-2",
   "version": "0.1.0",
   "private": true,
